--- a/index.html
+++ b/index.html
@@ -9,7 +9,44 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <a href="index.html" class="container-logo">
+        <img src="./logo.svg" alt="logo" />
+      </a>
+      <nav class="tag-container">
+        <button class="tag">#Sometag</button>
+        <button class="tag">#Sometag</button>
+        <button class="tag">#Sometag</button>
+        <button class="tag">#Sometag</button>
+        <button class="tag">#Sometag</button>
+        <button class="tag">#Sometag</button>
+        <button class="tag">#Sometag</button>
+        <button class="tag">#Sometag</button>
+      </nav>
+      <h1 class="main-title">Nos photographes</h1>
+    </header>
+    <main>
+      <section class="photograph-container">
+        <article class="photograph">
+          <a href="" class="photograph-link">
+            <img
+              src="./Sample Photos/Photographers ID Photos/EllieRoseWilkens.jpg"
+              alt=""
+              class="photograph-img"
+            />
+            <h2 class="photograph-name">Mimi Keele</h2>
+          </a>
+        </article>
+      </section>
+    </main>
+  </body>
 </html>
