finished integration first page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
     <header>
       <a href="index.html" class="container-logo">
-        <img src="./logo.svg" alt="logo" />
+        <img src="./logo.svg" alt="logo" class="logo" />
       </a>
       <nav class="tag-container">
         <button class="tag">#Sometag</button>
@@ -45,6 +45,122 @@
             />
             <h2 class="photograph-name">Mimi Keele</h2>
           </a>
+          <div class="information-container">
+            <p class="city">London, UK</p>
+            <p class="tagline">Voir le beau dans le quotidien</p>
+            <p class="price">400€/jour</p>
+          </div>
+          <div class="photograph-tag-container">
+            <button class="tag">#Sometag</button>
+            <button class="tag">#Sometag</button>
+            <button class="tag">#Sometag</button>
+            <button class="tag">#Sometag</button>
+          </div>
+        </article>
+        <article class="photograph">
+          <a href="" class="photograph-link">
+            <img
+              src="./Sample Photos/Photographers ID Photos/EllieRoseWilkens.jpg"
+              alt=""
+              class="photograph-img"
+            />
+            <h2 class="photograph-name">Mimi Keele</h2>
+          </a>
+          <div class="information-container">
+            <p class="city">London, UK</p>
+            <p class="tagline">Voir le beau dans le quotidien</p>
+            <p class="price">400€/jour</p>
+          </div>
+          <div class="photograph-tag-container">
+            <button class="tag">#Sometag</button>
+            <button class="tag">#Sometag</button>
+            <button class="tag">#Sometag</button>
+            <button class="tag">#Sometag</button>
+          </div>
+        </article>
+        <article class="photograph">
+          <a href="" class="photograph-link">
+            <img
+              src="./Sample Photos/Photographers ID Photos/EllieRoseWilkens.jpg"
+              alt=""
+              class="photograph-img"
+            />
+            <h2 class="photograph-name">Mimi Keele</h2>
+          </a>
+          <div class="information-container">
+            <p class="city">London, UK</p>
+            <p class="tagline">Voir le beau dans le quotidien</p>
+            <p class="price">400€/jour</p>
+          </div>
+          <div class="photograph-tag-container">
+            <button class="tag">#Sometag</button>
+            <button class="tag">#Sometag</button>
+            <button class="tag">#Sometag</button>
+            <button class="tag">#Sometag</button>
+          </div>
+        </article>
+        <article class="photograph">
+          <a href="" class="photograph-link">
+            <img
+              src="./Sample Photos/Photographers ID Photos/EllieRoseWilkens.jpg"
+              alt=""
+              class="photograph-img"
+            />
+            <h2 class="photograph-name">Mimi Keele</h2>
+          </a>
+          <div class="information-container">
+            <p class="city">London, UK</p>
+            <p class="tagline">Voir le beau dans le quotidien</p>
+            <p class="price">400€/jour</p>
+          </div>
+          <div class="photograph-tag-container">
+            <button class="tag">#Sometag</button>
+            <button class="tag">#Sometag</button>
+            <button class="tag">#Sometag</button>
+            <button class="tag">#Sometag</button>
+          </div>
+        </article>
+        <article class="photograph">
+          <a href="" class="photograph-link">
+            <img
+              src="./Sample Photos/Photographers ID Photos/EllieRoseWilkens.jpg"
+              alt=""
+              class="photograph-img"
+            />
+            <h2 class="photograph-name">Mimi Keele</h2>
+          </a>
+          <div class="information-container">
+            <p class="city">London, UK</p>
+            <p class="tagline">Voir le beau dans le quotidien</p>
+            <p class="price">400€/jour</p>
+          </div>
+          <div class="photograph-tag-container">
+            <button class="tag">#Sometag</button>
+            <button class="tag">#Sometag</button>
+            <button class="tag">#Sometag</button>
+            <button class="tag">#Sometag</button>
+          </div>
+        </article>
+        <article class="photograph">
+          <a href="" class="photograph-link">
+            <img
+              src="./Sample Photos/Photographers ID Photos/EllieRoseWilkens.jpg"
+              alt=""
+              class="photograph-img"
+            />
+            <h2 class="photograph-name">Mimi Keele</h2>
+          </a>
+          <div class="information-container">
+            <p class="city">London, UK</p>
+            <p class="tagline">Voir le beau dans le quotidien</p>
+            <p class="price">400€/jour</p>
+          </div>
+          <div class="photograph-tag-container">
+            <button class="tag">#Sometag</button>
+            <button class="tag">#Sometag</button>
+            <button class="tag">#Sometag</button>
+            <button class="tag">#Sometag</button>
+          </div>
         </article>
       </section>
     </main>
