adding the photo section

--- a/photograph.html
+++ b/photograph.html
@@ -17,5 +17,49 @@
     />
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <header class="header-2">
+      <a href="index.html" class="container-logo">
+        <img src="./logo.svg" alt="logo" class="logo" />
+      </a>
+    </header>
+    <main class="main-2">
+      <section class="section-photograph-info">
+        <div class="information-container-2">
+          <div class="information-photograph">
+            <h1 class="photograph-name-2">Mimi Keele</h1>
+            <p class="city-2">London, UK</p>
+            <p class="tagline-2">Voir le beau dans le quotidien</p>
+            <div class="photograph-tag-container">
+              <button class="tag">#Sometag</button>
+              <button class="tag">#Sometag</button>
+              <button class="tag">#Sometag</button>
+              <button class="tag">#Sometag</button>
+            </div>
+          </div>
+          <div class="btn-container">
+            <button class="btn-contact">contactez-moi</button>
+          </div>
+        </div>
+        <img
+          src="./Sample Photos/Photographers ID Photos/EllieRoseWilkens.jpg"
+          alt=""
+          class="photograph-img"
+        />
+      </section>
+      <section class="section-photo-container">
+        <article class="photo-container">
+          <a href="">
+            <img
+              src="./Sample Photos/Ellie Rose/Architecture_Connected_Curves.jpg"
+              alt=""
+            />
+          </a>
+          <div class="img-description-container">
+            <h3 class="img-title">A nice picture</h3>
+          </div>
+        </article>
+      </section>
+    </main>
+  </body>
 </html>
