--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header>
+    <header class="header">
       <a href="index.html" class="container-logo">
         <img src="./logo.svg" alt="logo" class="logo" />
       </a>
@@ -34,7 +34,7 @@
       </nav>
       <h1 class="main-title">Nos photographes</h1>
     </header>
-    <main>
+    <main class="main">
       <section class="photograph-container">
         <article class="photograph">
           <a href="" class="photograph-link">
