--- a/photograph.html
+++ b/photograph.html
@@ -47,16 +47,109 @@
           class="photograph-img"
         />
       </section>
+
+      <!-- section photo -->
+
       <section class="section-photo-container">
-        <article class="photo-container">
-          <a href="">
+        <article class="img-container">
+          <a href="" class="img-link">
             <img
+              class="image"
               src="./Sample Photos/Ellie Rose/Architecture_Connected_Curves.jpg"
               alt=""
             />
           </a>
           <div class="img-description-container">
             <h3 class="img-title">A nice picture</h3>
+            <div class="heart-container">
+              <span class="number-likes">12</span>
+              <i class="fas fa-heart"></i>
+            </div>
+          </div>
+        </article>
+
+        <article class="img-container">
+          <a href="" class="img-link">
+            <img
+              class="image"
+              src="./Sample Photos/Ellie Rose/Architecture_Connected_Curves.jpg"
+              alt=""
+            />
+          </a>
+          <div class="img-description-container">
+            <h3 class="img-title">A nice picture</h3>
+            <div class="heart-container">
+              <span class="number-likes">12</span>
+              <i class="fas fa-heart"></i>
+            </div>
+          </div>
+        </article>
+
+        <article class="img-container">
+          <a href="" class="img-link">
+            <img
+              class="image"
+              src="./Sample Photos/Ellie Rose/Architecture_Connected_Curves.jpg"
+              alt=""
+            />
+          </a>
+          <div class="img-description-container">
+            <h3 class="img-title">A nice picture</h3>
+            <div class="heart-container">
+              <span class="number-likes">12</span>
+              <i class="fas fa-heart"></i>
+            </div>
+          </div>
+        </article>
+
+        <article class="img-container">
+          <a href="" class="img-link">
+            <img
+              class="image"
+              src="./Sample Photos/Ellie Rose/Architecture_Connected_Curves.jpg"
+              alt=""
+            />
+          </a>
+          <div class="img-description-container">
+            <h3 class="img-title">A nice picture</h3>
+            <div class="heart-container">
+              <span class="number-likes">12</span>
+              <i class="fas fa-heart"></i>
+            </div>
+          </div>
+        </article>
+
+        <article class="img-container">
+          <a href="" class="img-link">
+            <img
+              class="image"
+              src="./Sample Photos/Ellie Rose/Architecture_Connected_Curves.jpg"
+              alt=""
+            />
+          </a>
+          <div class="img-description-container">
+            <h3 class="img-title">A nice picture</h3>
+            <div class="heart-container">
+              <span class="number-likes">12</span>
+              <i class="fas fa-heart"></i>
+            </div>
+          </div>
+        </article>
+
+        <article class="img-container">
+          <a href="" class="img-link">
+            <img
+              class="image"
+              src="./Sample Photos/Ellie Rose/Architecture_Connected_Curves.jpg"
+              alt=""
+            />
+          </a>
+          <div class="img-description-container">
+            <h3 class="img-title">A nice picture</h3>
+            <div class="heart-container">
+              <span class="number-likes">12</span>
+              <i class="fas fa-heart"></i>
+            </div>
           </div>
         </article>
       </section>
