added lightbox in html

--- a/photograph.html
+++ b/photograph.html
@@ -168,6 +168,30 @@
         <span class="total-likes">683 <i class="fas fa-heart"></i></span>
         <span class="price-2">400€ / jour</span>
       </div>
+
+      <!-- lightbox -->
+
+      <!-- <div class="modal open">
+        <button class="close-btn">
+          <i class="fas fa-times"></i>
+        </button>
+        <div class="modal-content">
+          <button class="prev-btn"><i class="fas fa-chevron-left"></i></button>
+          <button class="next-btn"><i class="fas fa-chevron-right"></i></button>
+          <img
+            src="./Sample Photos/Ellie Rose/Architecture_Cross_Bar.jpg"
+            class="main-img"
+            alt=""
+          />
+          <h3 class="image-name">image-name</h3>
+        </div>
+      </div> -->
+
+      <!-- modal -->
+
+      <!-- <div class="bg-modal">
+        <div class="modal-content"></div>
+      </div> -->
     </main>
   </body>
 </html>
