--- a/photograph.html
+++ b/photograph.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <header class="header-2">
-      <a href="index.html" class="container-logo-2">
+      <a href="./index.html" class="container-logo-2">
         <img src="./logo.svg" alt="logo" class="logo" />
       </a>
     </header>
