--- a/photograph.html
+++ b/photograph.html
@@ -171,11 +171,11 @@
 
       <!-- lightbox -->
 
-      <!-- <div class="modal open">
-        <button class="close-btn">
-          <i class="fas fa-times"></i>
-        </button>
+      <div class="modal open">
         <div class="modal-content">
+          <button class="close-btn">
+            <i class="fas fa-times"></i>
+          </button>
           <button class="prev-btn"><i class="fas fa-chevron-left"></i></button>
           <button class="next-btn"><i class="fas fa-chevron-right"></i></button>
           <img
@@ -185,7 +185,7 @@
           />
           <h3 class="image-name">image-name</h3>
         </div>
-      </div> -->
+      </div>
 
       <!-- modal -->
 
