--- a/photograph.html
+++ b/photograph.html
@@ -171,7 +171,7 @@
 
       <!-- lightbox -->
 
-      <div class="modal open">
+      <div class="modal">
         <div class="modal-content">
           <button class="close-btn">
             <i class="fas fa-times"></i>
@@ -188,6 +188,30 @@
       </div>
 
       <!-- modal -->
+
+      <div class="bg-form">
+        <div class="container-form">
+          <h1 class="title-form">Contactez-moi Mimi Keel</h1>
+          <button class="close-btn-modal">
+            <i class="fas fa-times"></i>
+          </button>
+
+          <form class="form">
+            <label class="label-form">prénom</label>
+            <input type="text" class="input" />
+            <label class="label-form">Nom</label>
+            <input type="text" class="input" />
+            <label class="label-form">Email</label>
+            <input type="email" class="input" />
+            <label class="label-form">Votre message</label>
+
+            <textarea name="message" id="form-message" cols="30" rows="10">
+            </textarea>
+
+            <button type="submit" class="btn-form">Envoyer</button>
+          </form>
+        </div>
+      </div>
 
       <!-- <div class="bg-modal">
         <div class="modal-content"></div>
