--- a/index.html
+++ b/index.html
@@ -164,6 +164,6 @@
         </article>
       </section>
     </main>
-    <script src="./script.js"></script>
+    <script src="./Pages/index.js"></script>
   </body>
 </html>
