--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <main class="main">
       <section class="photograph-container">
         <article class="photograph">
-          <a href="" class="photograph-link">
+          <a href="./photograph.html?id=1" class="photograph-link">
             <img
               src="./Sample Photos/Photographers ID Photos/EllieRoseWilkens.jpg"
               alt=""
