added photograpger data

--- a/photograph.html
+++ b/photograph.html
@@ -27,9 +27,9 @@
       <section class="section-photograph-info">
         <div class="information-container-2">
           <div class="information-photograph">
-            <h1 class="photograph-name-2">Mimi Keele</h1>
-            <p class="city-2">London, UK</p>
-            <p class="tagline-2">Voir le beau dans le quotidien</p>
+            <h1 class="photograph-name-2"></h1>
+            <p class="city-2"></p>
+            <p class="tagline-2"></p>
             <div class="photograph-tag-container">
               <button class="tag">#Sometag</button>
               <button class="tag">#Sometag</button>
@@ -41,11 +41,7 @@
             <button class="btn-contact">contactez-moi</button>
           </div>
         </div>
-        <img
-          src="./Sample Photos/Photographers ID Photos/EllieRoseWilkens.jpg"
-          alt=""
-          class="photograph-img-2"
-        />
+        <img src="" alt="" class="photograph-img-2" />
       </section>
 
       <!-- vertical dropdown menu -->
@@ -227,6 +223,7 @@
         <div class="modal-content"></div>
       </div> -->
     </main>
+
     <script src="./Pages/photographers.js"></script>
   </body>
 </html>
