--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <a href="index.html" class="container-logo">
         <img src="./logo.svg" alt="logo" class="logo" />
       </a>
-      <nav class="tag-container">
+      <!-- <nav class="tag-container">
         <button class="tag">#Sometag</button>
         <button class="tag">#Sometag</button>
         <button class="tag">#Sometag</button>
@@ -31,12 +31,12 @@
         <button class="tag">#Sometag</button>
         <button class="tag">#Sometag</button>
         <button class="tag">#Sometag</button>
-      </nav>
+      </nav> -->
       <h1 class="main-title">Nos photographes</h1>
     </header>
     <main class="main">
       <section class="photograph-container">
-        <article class="photograph">
+        <!-- <article class="photograph">
           <a href="./photograph.html?id=1" class="photograph-link">
             <img
               src="./Sample Photos/Photographers ID Photos/EllieRoseWilkens.jpg"
@@ -161,7 +161,7 @@
             <button class="tag">#Sometag</button>
             <button class="tag">#Sometag</button>
           </div>
-        </article>
+        </article> -->
       </section>
     </main>
     <script src="./factory/photographer.js"></script>
