--- a/photograph.html
+++ b/photograph.html
@@ -52,7 +52,7 @@
       <!-- section photo -->
 
       <section class="section-photo-container">
-        <article class="img-container">
+        <!-- <article class="img-container">
           <a href="" class="img-link">
             <img
               class="image"
@@ -152,7 +152,11 @@
               <i class="fas fa-heart"></i>
             </div>
           </div>
-        </article>
+        </article> -->
+        <!-- <article class="img-container">
+          <a href="" class="img-link">
+            <video class="video" src="./Sample Photos/527/Travel_Rock_Mountains.mp4"></video>
+          </a> -->
       </section>
       <div class="container-like-info">
         <span class="total-likes">683 <i class="fas fa-heart"></i></span>
@@ -219,5 +223,7 @@
     </main>
 
     <script src="./Pages/photographers.js"></script>
+    <script src="./utils/form.js"></script>
+    <script src="./utils/displayMedia.js"></script>
   </body>
 </html>
