remove element html

--- a/photograph.html
+++ b/photograph.html
@@ -159,8 +159,8 @@
           </a> -->
       </section>
       <div class="container-like-info">
-        <span class="total-likes">683 <i class="fas fa-heart"></i></span>
-        <span class="price-2">400€ / jour</span>
+        <span class="total-likes"> <i class="fas fa-heart"></i></span>
+        <span class="price-2"></span>
       </div>
 
       <!-- lightbox -->
