sorted different medias

--- a/photograph.html
+++ b/photograph.html
@@ -43,7 +43,7 @@
         <label id="label-criteria" for="criteria">Trier par</label>
 
         <select name="criteria" id="criteria">
-          <option value="popularity">Popularité</option>
+          <option value="likes">Popularité</option>
           <option value="date">Date</option>
           <option value="title">Titre</option>
         </select>
