--- a/photograph.html
+++ b/photograph.html
@@ -224,6 +224,7 @@
 
     <script src="./Pages/photographers.js"></script>
     <script src="./utils/form.js"></script>
+    <script src="./utils/lightbox.js"></script>
     <script src="./utils/displayMedia.js"></script>
   </body>
 </html>
