reorganized all the files with modules

--- a/photograph.html
+++ b/photograph.html
@@ -141,9 +141,6 @@
       </div> -->
     </main>
 
-    <script src="./Pages/photographers.js"></script>
-    <script src="./utils/form.js"></script>
-    <script src="./utils/lightbox.js"></script>
-    <script src="./utils/displayMedia.js"></script>
+    <script type="module" src="./Pages/photographer.js"></script>
   </body>
 </html>
