--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         </article> -->
       </section>
     </main>
-    <script src="./factory/photographer.js"></script>
-    <script src="./Pages/index.js"></script>
+
+    <script type="module" src="./Pages/index.js"></script>
   </body>
 </html>
