added click lightbox

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <p class="tagline">Voir le beau dans le quotidien</p>
             <p class="price">400€/jour</p>
           </div>
-          <div class="photograph-tag-container">
+          <div class="photograph-tag-container">s
             <button class="tag">#Sometag</button>
             <button class="tag">#Sometag</button>
             <button class="tag">#Sometag</button>
