--- a/photograph.html
+++ b/photograph.html
@@ -91,12 +91,15 @@
           </button>
           <button class="prev-btn"><i class="fas fa-chevron-left"></i></button>
           <button class="next-btn"><i class="fas fa-chevron-right"></i></button>
-          <img
-            src="./Sample Photos/Ellie Rose/Architecture_Cross_Bar.jpg"
-            class="main-img"
-            alt=""
-          />
-          <h3 class="image-name">image-name</h3>
+          <div class="lightbox-container">
+            <!-- créer une div dans js englobant  -->
+            <img
+              src="./Sample Photos/Ellie Rose/Architecture_Cross_Bar.jpg"
+              class="main-img"
+              alt=""
+            />
+            <h3 class="image-name">image-name</h3>
+          </div>
         </div>
       </div>
 
