advance on lightbox

--- a/photograph.html
+++ b/photograph.html
@@ -89,17 +89,17 @@
           <button class="close-btn">
             <i class="fas fa-times"></i>
           </button>
-          <button class="prev-btn"><i class="fas fa-chevron-left"></i></button>
-          <button class="next-btn"><i class="fas fa-chevron-right"></i></button>
-          <div class="lightbox-container">
-            <!-- créer une div dans js englobant  -->
-            <img
-              src="./Sample Photos/Ellie Rose/Architecture_Cross_Bar.jpg"
-              class="main-img"
-              alt=""
-            />
-            <h3 class="image-name">image-name</h3>
-          </div>
+          <button class="lightbox-btns prev-btn">
+            <i class="fas fa-chevron-left"></i>
+          </button>
+          <button class="lightbox-btns next-btn">
+            <i class="fas fa-chevron-right"></i>
+          </button>
+          <!-- <div class="lightbox-container"> -->
+          <!-- créer une div dans js englobant  -->
+          <img src="" class="main-img" alt="" />
+          <h3 class="image-name">image-name</h3>
+          <!-- </div> -->
         </div>
       </div>
 
