functions in lightbox

--- a/photograph.html
+++ b/photograph.html
@@ -89,10 +89,10 @@
           <button class="close-btn">
             <i class="fas fa-times"></i>
           </button>
-          <button class="lightbox-btns prev-btn">
+          <button class="lightbox-btns prev-btn" id="left">
             <i class="fas fa-chevron-left"></i>
           </button>
-          <button class="lightbox-btns next-btn">
+          <button class="lightbox-btns next-btn" id="right">
             <i class="fas fa-chevron-right"></i>
           </button>
           <!-- <div class="lightbox-container"> -->
