almost finish lightbox

--- a/photograph.html
+++ b/photograph.html
@@ -89,15 +89,16 @@
           <button class="close-btn">
             <i class="fas fa-times"></i>
           </button>
-          <button class="lightbox-btns prev-btn" id="left">
+          <button class="lightbox-btns prev-btn" id="prev">
             <i class="fas fa-chevron-left"></i>
           </button>
-          <button class="lightbox-btns next-btn" id="right">
+          <button class="lightbox-btns next-btn" id="next">
             <i class="fas fa-chevron-right"></i>
           </button>
           <!-- <div class="lightbox-container"> -->
           <!-- créer une div dans js englobant  -->
           <img src="" class="main-img" alt="" />
+          <video src="" class="main-img" alt=""></video>
           <h3 class="image-name">image-name</h3>
           <!-- </div> -->
         </div>
