--- a/photograph.html
+++ b/photograph.html
@@ -98,7 +98,7 @@
           <!-- <div class="lightbox-container"> -->
           <!-- créer une div dans js englobant  -->
           <img src="" class="main-img" alt="" />
-          <video src="" class="main-img" alt=""></video>
+          <video src="" id="lightbox-video" alt=""></video>
           <h3 class="image-name">image-name</h3>
           <!-- </div> -->
         </div>
