deleted comment html

--- a/photograph.html
+++ b/photograph.html
@@ -51,32 +51,7 @@
 
       <!-- section photo -->
 
-      <section class="section-photo-container">
-        <!-- <article class="img-container">
-          <a href="" class="img-link">
-            <img
-              class="image"
-              src="./Sample Photos/Marcel/Architecture_On_a_hill.jpg"
-              alt=""
-            />
-          </a>
-          <div class="img-description-container">
-            <h3 class="img-title">A nice picture</h3>
-            <div class="heart-container">
-              <span class="number-likes">12</span>
-              <i class="fas fa-heart"></i>
-            </div>
-          </div>
-        </article>
-
-        
-        
-        </article> -->
-        <!-- <article class="img-container">
-          <a href="" class="img-link">
-            <video class="video" src="./Sample Photos/527/Travel_Rock_Mountains.mp4"></video>
-          </a> -->
-      </section>
+      <section class="section-photo-container"></section>
       <div class="container-like-info">
         <span class="total-likes"> <i class="fas fa-heart"></i></span>
         <span class="price-2"></span>
@@ -95,12 +70,9 @@
           <button class="lightbox-btns next-btn" id="next">
             <i class="fas fa-chevron-right"></i>
           </button>
-          <!-- <div class="lightbox-container"> -->
-          <!-- créer une div dans js englobant  -->
           <img src="" class="main-img" alt="" />
           <video src="" id="lightbox-video" autoplay alt=""></video>
           <h3 class="image-name">image-name</h3>
-          <!-- </div> -->
         </div>
       </div>
 
@@ -139,10 +111,6 @@
           </form>
         </div>
       </div>
-
-      <!-- <div class="bg-modal">
-        <div class="modal-content"></div>
-      </div> -->
     </main>
 
     <script type="module" src="./Pages/photographer.js"></script>
