--- a/index.html
+++ b/index.html
@@ -22,147 +22,11 @@
       <a href="index.html" class="container-logo">
         <img src="./logo.svg" alt="logo" class="logo" />
       </a>
-      <!-- <nav class="tag-container">
-        <button class="tag">#Sometag</button>
-        <button class="tag">#Sometag</button>
-        <button class="tag">#Sometag</button>
-        <button class="tag">#Sometag</button>
-        <button class="tag">#Sometag</button>
-        <button class="tag">#Sometag</button>
-        <button class="tag">#Sometag</button>
-        <button class="tag">#Sometag</button>
-      </nav> -->
+
       <h1 class="main-title">Nos photographes</h1>
     </header>
     <main class="main">
-      <section class="photograph-container">
-        <!-- <article class="photograph">
-          <a href="./photograph.html?id=1" class="photograph-link">
-            <img
-              src="./Sample Photos/Photographers ID Photos/EllieRoseWilkens.jpg"
-              alt=""
-              class="photograph-img"
-            />
-            <h2 class="photograph-name">Mimi Keele</h2>
-          </a>
-          <div class="information-container">
-            <p class="city">London, UK</p>
-            <p class="tagline">Voir le beau dans le quotidien</p>
-            <p class="price">400€/jour</p>
-          </div>
-          <div class="photograph-tag-container">s
-            <button class="tag">#Sometag</button>
-            <button class="tag">#Sometag</button>
-            <button class="tag">#Sometag</button>
-            <button class="tag">#Sometag</button>
-          </div>
-        </article>
-        <article class="photograph">
-          <a href="" class="photograph-link">
-            <img
-              src="./Sample Photos/Photographers ID Photos/EllieRoseWilkens.jpg"
-              alt=""
-              class="photograph-img"
-            />
-            <h2 class="photograph-name">Mimi Keele</h2>
-          </a>
-          <div class="information-container">
-            <p class="city">London, UK</p>
-            <p class="tagline">Voir le beau dans le quotidien</p>
-            <p class="price">400€/jour</p>
-          </div>
-          <div class="photograph-tag-container">
-            <button class="tag">#Sometag</button>
-            <button class="tag">#Sometag</button>
-            <button class="tag">#Sometag</button>
-            <button class="tag">#Sometag</button>
-          </div>
-        </article>
-        <article class="photograph">
-          <a href="" class="photograph-link">
-            <img
-              src="./Sample Photos/Photographers ID Photos/EllieRoseWilkens.jpg"
-              alt=""
-              class="photograph-img"
-            />
-            <h2 class="photograph-name">Mimi Keele</h2>
-          </a>
-          <div class="information-container">
-            <p class="city">London, UK</p>
-            <p class="tagline">Voir le beau dans le quotidien</p>
-            <p class="price">400€/jour</p>
-          </div>
-          <div class="photograph-tag-container">
-            <button class="tag">#Sometag</button>
-            <button class="tag">#Sometag</button>
-            <button class="tag">#Sometag</button>
-            <button class="tag">#Sometag</button>
-          </div>
-        </article>
-        <article class="photograph">
-          <a href="" class="photograph-link">
-            <img
-              src="./Sample Photos/Photographers ID Photos/EllieRoseWilkens.jpg"
-              alt=""
-              class="photograph-img"
-            />
-            <h2 class="photograph-name">Mimi Keele</h2>
-          </a>
-          <div class="information-container">
-            <p class="city">London, UK</p>
-            <p class="tagline">Voir le beau dans le quotidien</p>
-            <p class="price">400€/jour</p>
-          </div>
-          <div class="photograph-tag-container">
-            <button class="tag">#Sometag</button>
-            <button class="tag">#Sometag</button>
-            <button class="tag">#Sometag</button>
-            <button class="tag">#Sometag</button>
-          </div>
-        </article>
-        <article class="photograph">
-          <a href="" class="photograph-link">
-            <img
-              src="./Sample Photos/Photographers ID Photos/EllieRoseWilkens.jpg"
-              alt=""
-              class="photograph-img"
-            />
-            <h2 class="photograph-name">Mimi Keele</h2>
-          </a>
-          <div class="information-container">
-            <p class="city">London, UK</p>
-            <p class="tagline">Voir le beau dans le quotidien</p>
-            <p class="price">400€/jour</p>
-          </div>
-          <div class="photograph-tag-container">
-            <button class="tag">#Sometag</button>
-            <button class="tag">#Sometag</button>
-            <button class="tag">#Sometag</button>
-            <button class="tag">#Sometag</button>
-          </div>
-        </article>
-        <article class="photograph">
-          <a href="" class="photograph-link">
-            <img
-              src="./Sample Photos/Photographers ID Photos/EllieRoseWilkens.jpg"
-              alt=""
-              class="photograph-img"
-            />
-            <h2 class="photograph-name">Mimi Keele</h2>
-          </a>
-          <div class="information-container">
-            <p class="city">London, UK</p>
-            <p class="tagline">Voir le beau dans le quotidien</p>
-            <p class="price">400€/jour</p>
-          </div>
-          <div class="photograph-tag-container">
-            <button class="tag">#Sometag</button>
-            <button class="tag">#Sometag</button>
-            <button class="tag">#Sometag</button>
-            <button class="tag">#Sometag</button>
-          </div>
-        </article> -->
-      </section>
+      <section class="photograph-container"></section>
     </main>
 
     <script type="module" src="./Pages/index.js"></script>
