added aria-label &alt

--- a/photograph.html
+++ b/photograph.html
@@ -20,7 +20,7 @@
   <body>
     <header class="header-2">
       <a href="./index.html" class="container-logo-2">
-        <img src="./logo.svg" alt="logo" class="logo" />
+        <img src="./logo.svg" alt="Fisheye Home page" class="logo" />
       </a>
     </header>
     <main class="main-2">
@@ -59,15 +59,15 @@
 
       <!-- lightbox -->
 
-      <div class="modal">
+      <div class="modal" aria-label="image closeup view">
         <div class="modal-content">
-          <button class="close-btn">
+          <button class="close-btn" alt="close dialog">
             <i class="fas fa-times"></i>
           </button>
-          <button class="lightbox-btns prev-btn" id="prev">
+          <button class="lightbox-btns prev-btn" alt="previous image" id="prev">
             <i class="fas fa-chevron-left"></i>
           </button>
-          <button class="lightbox-btns next-btn" id="next">
+          <button class="lightbox-btns next-btn" alt="next image" id="next">
             <i class="fas fa-chevron-right"></i>
           </button>
           <img src="" class="main-img" alt="" />
