--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
     <header class="header">
       <a href="index.html" class="container-logo">
-        <img src="./logo.svg" alt="logo" class="logo" />
+        <img src="./logo.svg" alt="Fisheye Home page" class="logo" />
       </a>
 
       <h1 class="main-title">Nos photographes</h1>
