--- a/photograph.html
+++ b/photograph.html
@@ -86,26 +86,30 @@
           </button>
 
           <form class="form">
-            <label class="label-form">prénom</label>
+            <label class="label-form" for="first">prénom</label>
             <input type="text" class="input" id="first" />
-            <span class="error-msg"
+            <span class="error-msg" role="alert"
               >Veuillez entrer 2 caractères ou plus pour le champ du
               prénom.</span
             >
-            <label class="label-form">Nom</label>
+            <label class="label-form" for="last">Nom</label>
             <input type="text" class="input" id="last" />
-            <span class="error-msg"
+            <span class="error-msg" role="alert"
               >Veuillez entrer 2 caractères ou plus pour le champ du nom.</span
             >
-            <label class="label-form">Email</label>
+            <label class="label-form" for="email">Email</label>
             <input type="email" class="input" id="email" />
-            <span class="error-msg">L'adresse email doit être valide</span>
+            <span class="error-msg" role="alert"
+              >L'adresse email doit être valide</span
+            >
 
-            <label class="label-form">Votre message</label>
+            <label class="label-form" for="form-message">Votre message</label>
 
             <textarea name="message" id="form-message" cols="30" rows="10">
             </textarea>
-            <span class="error-msg">Veuillez écrire un message</span>
+            <span class="error-msg" role="alert"
+              >Veuillez écrire un message</span
+            >
 
             <button type="submit" class="btn-form">Envoyer</button>
           </form>
