--- a/photograph.html
+++ b/photograph.html
@@ -35,7 +35,7 @@
             <button class="btn-contact">contactez-moi</button>
           </div>
         </div>
-        <img src="" alt="" class="photograph-img-2" />
+        <img alt="portrait du photographe" class="photograph-img-2" />
       </section>
 
       <!-- vertical dropdown menu -->
@@ -61,13 +61,21 @@
 
       <div class="modal" aria-label="image closeup view">
         <div class="modal-content">
-          <button class="close-btn" alt="close dialog">
+          <button class="close-btn" aria-label="close dialog">
             <i class="fas fa-times"></i>
           </button>
-          <button class="lightbox-btns prev-btn" alt="previous image" id="prev">
+          <button
+            class="lightbox-btns prev-btn"
+            aria-label="previous image"
+            id="prev"
+          >
             <i class="fas fa-chevron-left"></i>
           </button>
-          <button class="lightbox-btns next-btn" alt="next image" id="next">
+          <button
+            class="lightbox-btns next-btn"
+            aria-label="next image"
+            id="next"
+          >
             <i class="fas fa-chevron-right"></i>
           </button>
           <img src="" class="main-img" alt="" />
@@ -81,7 +89,7 @@
       <div class="bg-form">
         <div class="container-form">
           <h1 class="title-form">Contactez-moi Mimi Keel</h1>
-          <button class="close-btn-modal">
+          <button class="close-btn-modal" aria-label="close contact form">
             <i class="fas fa-times"></i>
           </button>
 
