deleted alt video

--- a/photograph.html
+++ b/photograph.html
@@ -78,8 +78,8 @@
           >
             <i class="fas fa-chevron-right"></i>
           </button>
-          <img src="" class="main-img" alt="" />
-          <video src="" id="lightbox-video" autoplay alt=""></video>
+          <img class="main-img" alt="" />
+          <video id="lightbox-video" autoplay></video>
           <h3 class="image-name">image-name</h3>
         </div>
       </div>
