changed arialabel and autoplay

--- a/photograph.html
+++ b/photograph.html
@@ -20,7 +20,7 @@
   <body>
     <header class="header-2">
       <a href="./index.html" class="container-logo-2">
-        <img src="./logo.svg" alt="Fisheye Home page" class="logo" />
+        <img src="./logo.svg" aria-label="Fisheye Home page" class="logo" />
       </a>
     </header>
     <main class="main-2">
