--- a/photograph.html
+++ b/photograph.html
@@ -61,7 +61,7 @@
 
       <div class="modal" aria-label="image closeup view">
         <div class="modal-content">
-          <button class="close-btn" aria-label="close dialog">
+          <button class="close-btn" aria-label="close dialog" tabindex="0">
             <i class="fas fa-times"></i>
           </button>
           <button
