add esc key to lightbox

--- a/photograph.html
+++ b/photograph.html
@@ -64,9 +64,13 @@
 
       <!-- lightbox -->
 
-      <div class="modal" aria-label="image closeup view">
+      <div class="modal" aria-label="image closeup view" aria-modal="false">
         <div class="modal-content">
-          <button class="close-btn" aria-label="close dialog" tabindex="0">
+          <button
+            class="close-btn"
+            aria-label="clicker pour fermer la gallerie d'image"
+            tabindex="0"
+          >
             <i class="fas fa-times"></i>
           </button>
           <button
