changed the like function

--- a/photograph.html
+++ b/photograph.html
@@ -58,7 +58,9 @@
 
       <section class="section-photo-container"></section>
       <div class="container-like-info">
-        <span class="total-likes"> <i class="fas fa-heart"></i></span>
+        <span class="total-likes">
+          <span id="totalLikes"></span><i class="fas fa-heart"></i
+        ></span>
         <span class="price-2"></span>
       </div>
 
