added focus lightbox

--- a/photograph.html
+++ b/photograph.html
@@ -106,7 +106,7 @@
 
           <form class="form">
             <label class="label-form" for="first">prénom</label>
-            <input type="text" class="input" id="first" />
+            <input type="text" class="input" id="first" tabindex="0" />
             <span class="error-msg" role="alert"
               >Veuillez entrer 2 caractères ou plus pour le champ du
               prénom.</span
