--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
   <body>
     <header class="header">
       <a href="index.html" class="container-logo">
-        <img src="./logo.svg" aria-label="Fisheye Home page" class="logo" />
+        <img
+          src="./logo.svg"
+          aria-label="Fisheye Home page"
+          alt="logo Fisheye"
+          class="logo"
+        />
       </a>
 
       <h1 class="main-title">Nos photographes</h1>
