added role html

--- a/photograph.html
+++ b/photograph.html
@@ -71,7 +71,12 @@
 
       <!-- lightbox -->
 
-      <div class="modal" aria-label="image closeup view" aria-modal="false">
+      <div
+        class="modal"
+        aria-label="image closeup view"
+        aria-modal="false"
+        role="dialog"
+      >
         <div class="modal-content">
           <button
             class="close-btn"
@@ -102,7 +107,7 @@
 
       <!-- modal -->
 
-      <div class="bg-form" aria-modal="false">
+      <div class="bg-form" aria-modal="false" role="dialog">
         <div class="container-form">
           <h1 class="title-form">Contactez-moi Mimi Keel</h1>
           <button class="close-btn-modal" aria-label="close contact form">
