--- a/photograph.html
+++ b/photograph.html
@@ -40,7 +40,7 @@
             <button class="btn-contact">contactez-moi</button>
           </div>
         </div>
-        <img alt="portrait du photographe" class="photograph-img-2" />
+        <img src="" alt="portrait du photographe" class="photograph-img-2" />
       </section>
 
       <!-- vertical dropdown menu -->
@@ -99,7 +99,7 @@
           >
             <i class="fas fa-chevron-right"></i>
           </button>
-          <img class="main-img" alt="" />
+          <img src="" class="main-img" alt="" />
           <video id="lightbox-video" autoplay></video>
           <h3 class="image-name">image-name</h3>
         </div>
