changer les icones par svg

--- a/photograph.html
+++ b/photograph.html
@@ -21,7 +21,7 @@
     <header class="header-2">
       <a href="./index.html" class="container-logo-2">
         <img
-          src="./logo.svg"
+          src="./icons/logo.svg"
           alt="logo Fisheye"
           aria-label="Fisheye Home page"
           class="logo"
@@ -83,21 +83,21 @@
             aria-label="clicker pour fermer la gallerie d'image"
             tabindex="0"
           >
-            <i class="fas fa-times"></i>
+            <img src="./icons/close.svg" alt="bouton fermer" class="icon" />
           </button>
           <button
             class="lightbox-btns prev-btn"
             aria-label="previous image"
             id="prev"
           >
-            <i class="fas fa-chevron-left"></i>
+            <img src="./icons/prev.svg" alt="bouton précédent" class="icon" />
           </button>
           <button
             class="lightbox-btns next-btn"
             aria-label="next image"
             id="next"
           >
-            <i class="fas fa-chevron-right"></i>
+            <img src="./icons/next.svg" alt="bouton suivant" class="icon" />
           </button>
           <img src="" class="main-img" alt="" />
           <video id="lightbox-video" autoplay></video>
@@ -111,7 +111,7 @@
         <div class="container-form">
           <h1 class="title-form">Contactez-moi Mimi Keel</h1>
           <button class="close-btn-modal" aria-label="close contact form">
-            <i class="fas fa-times"></i>
+            <img src="./icons/close.svg" alt="bouton fermer" class="icon" />
           </button>
 
           <form class="form">
