--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header class="header">
       <a href="index.html" class="container-logo">
         <img
-          src="./logo.svg"
+          src="./icons/logo.svg"
           aria-label="Fisheye Home page"
           alt="logo Fisheye"
           class="logo"
