--- a/photograph.html
+++ b/photograph.html
@@ -64,8 +64,9 @@
       <section class="section-photo-container"></section>
       <div class="container-like-info">
         <span class="total-likes">
-          <span id="totalLikes"></span><i class="fas fa-heart"></i
-        ></span>
+          <span id="totalLikes"></span
+          ><img src="./icons/heart.svg" alt="" id="total-heart"
+        /></span>
         <span class="price-2"></span>
       </div>
 
