--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
       href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" type="image/png" href="./icons/favicon.png" />
+
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
